feat(java 8): set maven-compiler-plugin version to 1.8 (#161)
closes [BS-16081](https://bonitasoft.atlassian.net/browse/BS-16081)