@@ -551,7 +551,7 @@
                                     <version>[3.0.2,)</version>
                                 </requireMavenVersion>
                                 <requireJavaVersion>
-                                    <version>[1.7,)</version>
+                                    <version>[1.8,)</version>
                                 </requireJavaVersion>
                             </rules>
                         </configuration>
@@ -582,8 +582,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -606,7 +606,7 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
-                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                            <argLine>-Xmx1024m</argLine>
                             <includes>
                                 <!--the following are failsafe conventions -->
                                 <include>**/*IT.java</include>
@@ -762,7 +762,7 @@
                                     <goal>verify</goal>
                                 </goals>
                                 <configuration>
-                                    <argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}</argLine>
+                                    <argLine>-Xmx1024m ${jacoco.agent.it.arg}</argLine>
                                     <includes>
                                         <!--the following are failsafe conventions -->
                                         <include>**/*IT.java</include>
